// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders consistently 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 6px;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,rgba(31,35,40,0.15));
  font-family: inherit;
  font-weight: 500;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: #24292f;
  background-color: #f6f8fa;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04),inset 0 1px 0 rgba(255,255,255,0.25);
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid #0969da;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: #8c959f;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,#eaeef2);
  border-color: var(--button-inactive-bgColor,#eaeef2);
  color: var(--button-inactive-fgColor,#57606a);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  background-color: #f3f4f6;
  border-color: var(--button-default-borderColor-hover,rgba(31,35,40,0.15));
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: hsla(220,14%,93%,1);
  border-color: var(--button-default-borderColor-active,rgba(31,35,40,0.15));
}

.c0[aria-expanded=true] {
  background-color: hsla(220,14%,93%,1);
  border-color: var(--button-default-borderColor-active,rgba(31,35,40,0.15));
}

.c0 [data-component="leadingVisual"],
.c0 [data-component="trailingVisual"],
.c0 [data-component="trailingAction"] {
  color: var(--button-color,#656d76);
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  className="c0"
  data-block={null}
  data-no-visuals={true}
  style={{}}
  type="button"
>
  <span
    className="c1"
    data-component="buttonContent"
  />
</button>
`;

exports[`Button respects block prop 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,undefined);
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.text;
  background-color: btn.bg;
  box-shadow: undefined,undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: primer.fg.disabled;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  background-color: btn.hoverBg;
  border-color: var(--button-default-borderColor-hover,undefined);
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0[aria-expanded=true] {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0 [data-component="leadingVisual"],
.c0 [data-component="trailingVisual"],
.c0 [data-component="trailingAction"] {
  color: var(--button-color,undefined);
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-block="block"
  data-no-visuals="true"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Block
    </span>
  </span>
</button>
`;

exports[`Button respects the alignContent prop 1`] = `
.c1 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,undefined);
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.text;
  background-color: btn.bg;
  box-shadow: undefined,undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: primer.fg.disabled;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  background-color: btn.hoverBg;
  border-color: var(--button-default-borderColor-hover,undefined);
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0[aria-expanded=true] {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0 [data-component="leadingVisual"],
.c0 [data-component="trailingVisual"],
.c0 [data-component="trailingAction"] {
  color: var(--button-color,undefined);
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Align start
    </span>
  </span>
</button>
`;

exports[`Button respects the large size prop 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,undefined);
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.text;
  background-color: btn.bg;
  box-shadow: undefined,undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: primer.fg.disabled;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  background-color: btn.hoverBg;
  border-color: var(--button-default-borderColor-hover,undefined);
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0[aria-expanded=true] {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0 [data-component="leadingVisual"],
.c0 [data-component="trailingVisual"],
.c0 [data-component="trailingAction"] {
  color: var(--button-color,undefined);
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  data-size="large"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button respects the small size prop 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,undefined);
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.text;
  background-color: btn.bg;
  box-shadow: undefined,undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: primer.fg.disabled;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  background-color: btn.hoverBg;
  border-color: var(--button-default-borderColor-hover,undefined);
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0[aria-expanded=true] {
  background-color: btn.activeBg;
  border-color: var(--button-default-borderColor-active,undefined);
}

.c0 [data-component="leadingVisual"],
.c0 [data-component="trailingVisual"],
.c0 [data-component="trailingAction"] {
  color: var(--button-color,undefined);
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  data-size="small"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button styles danger button appropriately 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: var(--button-default-borderColor-rest,undefined);
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.danger.text;
  background-color: btn.bg;
  box-shadow: undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: btn.danger.disabledText;
  background-color: btn.danger.disabledBg;
  border-color: btn.danger.disabledBorder;
}

.c0:disabled [data-component=ButtonCounter] {
  color: btn.danger.disabledCounterFg;
  background-color: btn.danger.disabledCounterBg;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
  color: btn.danger.counterFg;
  background-color: btn.danger.counterBg;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  color: btn.danger.hoverText;
  background-color: btn.danger.hoverBg;
  border-color: btn.danger.hoverBorder;
  box-shadow: undefined;
}

.c0:hover:not([disabled]):not([data-inactive]) [data-component=ButtonCounter] {
  background-color: btn.danger.hoverCounterBg;
  color: btn.danger.hoverCounterFg;
}

.c0:active:not([disabled]):not([data-inactive]) {
  color: btn.danger.selectedText;
  background-color: btn.danger.selectedBg;
  box-shadow: undefined;
  border-color: btn.danger.selectedBorder;
}

.c0[aria-expanded=true] {
  color: btn.danger.selectedText;
  background-color: btn.danger.selectedBg;
  box-shadow: undefined;
  border-color: btn.danger.selectedBorder;
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Danger
    </span>
  </span>
</button>
`;

exports[`Button styles invisible button appropriately 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: transparent;
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.text;
  background-color: transparent;
  box-shadow: none;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: primer.fg.disabled;
}

.c0:disabled [data-component=ButtonCounter],
.c0:disabled [data-component="leadingVisual"],
.c0:disabled [data-component="trailingAction"] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
  color: fg.muted;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
  color: fg.muted;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]) {
  background-color: actionListItem.default.hoverBg;
}

.c0:active:not([disabled]) {
  background-color: actionListItem.default.activeBg;
}

.c0[aria-expanded=true] {
  background-color: actionListItem.default.selectedBg;
}

.c0[data-component="IconButton"][data-no-visuals] {
  color: fg.muted;
}

.c0[data-no-visuals] {
  color: accent.fg;
}

.c0:has([data-component="ButtonCounter"]) {
  color: btn.text;
}

.c0:disabled[data-no-visuals] {
  color: primer.fg.disabled;
}

.c0:disabled[data-no-visuals] [data-component=ButtonCounter] {
  color: inherit;
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Invisible
    </span>
  </span>
</button>
`;

exports[`Button styles primary button appropriately 1`] = `
.c1 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  border-radius: 2;
  border: 1px solid;
  border-color: btn.primary.border;
  font-family: inherit;
  font-weight: semibold;
  font-size: 14px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 32px;
  padding: 0 12px;
  gap: 8px;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  -webkit-transition: 80ms cubic-bezier(0.65,0,0.35,1);
  transition: 80ms cubic-bezier(0.65,0,0.35,1);
  -webkit-transition-property: color,fill,background-color,border-color;
  transition-property: color,fill,background-color,border-color;
  color: btn.primary.text;
  background-color: btn.primary.bg;
  box-shadow: undefined;
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0[href] {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0[href]:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
}

.c0:active {
  -webkit-transition: none;
  transition: none;
}

.c0[data-inactive] {
  cursor: auto;
}

.c0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: btn.primary.disabledText;
  background-color: btn.primary.disabledBg;
}

.c0:disabled [data-component=ButtonCounter] {
  color: inherit;
}

.c0 [data-component=ButtonCounter] {
  font-size: 12px;
  background-color: btn.primary.counterBg;
  color: btn.primary.text;
}

.c0[data-component=IconButton] {
  display: inline-grid;
  padding: unset;
  place-content: center;
  width: 32px;
  min-width: unset;
}

.c0[data-size="small"] {
  padding: 0 8px;
  height: 28px;
  gap: 4px;
  font-size: 12px;
}

.c0[data-size="small"] [data-component="text"] {
  line-height: calc(20 / 12);
}

.c0[data-size="small"] [data-component=ButtonCounter] {
  font-size: 12px;
}

.c0[data-size="small"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 4px;
}

.c0[data-size="small"][data-component=IconButton] {
  width: 28px;
  padding: unset;
}

.c0[data-size="large"] {
  padding: 0 16px;
  height: 40px;
  gap: 8px;
}

.c0[data-size="large"] [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0[data-size="large"][data-component=IconButton] {
  width: 40px;
  padding: unset;
}

.c0[data-block="block"] {
  width: 100%;
}

.c0[data-inactive]:not([disabled]) {
  background-color: var(--button-inactive-bgColor,undefined);
  border-color: var(--button-inactive-bgColor,undefined);
  color: var(--button-inactive-fgColor,undefined);
}

.c0[data-inactive]:not([disabled]):focus-visible {
  box-shadow: none;
}

.c0 [data-component="leadingVisual"] {
  grid-area: leadingVisual;
}

.c0 [data-component="text"] {
  grid-area: text;
  line-height: calc(20/14);
  white-space: nowrap;
}

.c0 [data-component="trailingVisual"] {
  grid-area: trailingVisual;
}

.c0 [data-component="trailingAction"] {
  margin-right: -4px;
}

.c0 [data-component="buttonContent"] {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: grid;
  grid-template-areas: "leadingVisual text trailingVisual";
  grid-template-columns: min-content minmax(0,auto) min-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c0 [data-component="buttonContent"] > :not(:last-child) {
  margin-right: 8px;
}

.c0:hover:not([disabled]):not([data-inactive]) {
  color: btn.primary.hoverText;
  background-color: btn.primary.hoverBg;
}

.c0:focus:not([disabled]) {
  box-shadow: inset 0 0 0 3px;
}

.c0:focus-visible:not([disabled]) {
  box-shadow: inset 0 0 0 3px;
}

.c0:active:not([disabled]):not([data-inactive]) {
  background-color: btn.primary.selectedBg;
  box-shadow: undefined;
}

.c0[aria-expanded=true] {
  background-color: btn.primary.selectedBg;
  box-shadow: undefined;
}

@media (forced-colors:active) {
  .c0:focus {
    outline: solid 1px transparent;
  }
}

<button
  class="c0"
  data-no-visuals="true"
  type="button"
>
  <span
    class="c1"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Primary
    </span>
  </span>
</button>
`;
